Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-15783

[Python] Converting arrow MonthDayNanoInterval to pandas fails DCHECK

    XMLWordPrintableJSON

Details

    Description

      InitPandasStaticData is only called on python/pandas -> Arrow and not the reverse path

       

      This causes the DCHECK to make sure the Pandas type is not null to fail if import code is never used.

       

      A workaround to users of the library is to call pa.array([1]) which would avoid this issue.

      Attachments

        Issue Links

          Activity

            People

              emkornfield Micah Kornfield
              emkornfield Micah Kornfield
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 40m
                  1h 40m