ARROW-15783: Initialize static pandas data on write